Another css update, fixed header on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,6 +101,7 @@ body{
 	padding-bottom: 4%;
 }
 #footer{
+	padding-bottom: 2%;
 	padding-top: 3%;
 	height: 5%;
 	width: 100%;
