--- a/static/css/media.css
+++ b/static/css/media.css
@@ -48,6 +48,38 @@
 
 }
 
+@media screen and (max-width: 400px) {
+   #header {
+      height: auto;
+   }
+   .content {
+      width: auto;
+      float: none;
+      margin: 20px 0;
+   }
+   #sidebar {
+      width: 100%;
+      float: none;
+      margin: 0;
+   }
+   .nav-link{
+      font-size: 13px;
+   }
+   #sidebar-head{
+      margin-bottom: 2px;
+   }
+    .frame{
+      width: 100%;
+   }
+   .nav-link{
+      padding-top: 3%;
+   }
+
+}
+
+
+
+
 @media screen and (max-width: 480px) {
    html {
       -webkit-text-size-adjust: none;
